--- a/templates/utilities/sidebar.html
+++ b/templates/utilities/sidebar.html
@@ -48,7 +48,7 @@
                     </a>
                     <ul class="py-2 space-y-2 hidden">
                         <li>
-                            <a href="MyOrders\bag.php" class="flex items-center p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">Bag</a>
+                            <a href="bag.php" class="flex items-center p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">Bag</a>
                         </li>
                         <li>
                             <a href="#" class="flex items-center p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">Status</a>
