--- a/templates/utilities/user_navbar.html
+++ b/templates/utilities/user_navbar.html
@@ -14,7 +14,7 @@
             <h1 class="text-2xl font-bold">TrendTailor</h1>
         </div>
         <div class="flex items-center space-x-4">
-            <img src="templates/img/philippines-flag_1143296-777.png" alt="Philippines flag" class="h-5 w-8 object-cover">
+            <img src="img\philippines-flag_1143296-777.png" alt="Philippines flag" class="h-5 w-8 object-cover">
             <svg class="h-6 w-6 text-gray-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
             </svg>
